src/objects/MUSW__Milestone__c.object
<CustomObject>
    <description>Track deadlines and phases for project management</description>
    <fields>
        <fullName>MUSW__Application2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_Bluebeam_File_Checkin_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BG Bluebeam File Checkin Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_Bluebeam_Session_Id__c</fullName>
        <description>Bluebeam Studion Session Id</description>
        <label>BG Bluebeam Session Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Last_Task_Due_Date__c</fullName>
        <label>Last Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Original_Due_Date__c</fullName>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Original_Start_Date__c</fullName>
        <label>Original Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Predecessor_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predecessor Milestone</label>
        <referenceTo>MUSW__Milestone__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MUSW__Project2__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Related_To__c</fullName>
        <formula>IF(OR(ISNULL( MUSW__Permit2__c ), MUSW__Permit2__c = &quot;&quot;), 
IF(OR(ISNULL( MUSW__Project2__c ), MUSW__Project2__c = &quot;&quot;), 
&quot;&quot;, HYPERLINK( &quot;../&quot; &amp; MUSW__Project2__c, MUSW__Project2__r.Name ,&quot;_parent&quot; )), 
HYPERLINK( &quot;../&quot; &amp; MUSW__Permit2__c,MUSW__Permit2__r.Name,&quot;_parent&quot; ))</formula>
        <label>Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Status_Icon__c</fullName>
        <formula>IMAGE( 
IF(AND(ISNULL(MUSW__End_Date__c), MUSW__Due_Date__c &lt; TODAY()), &quot;/img/entitlement/casemilestone_isviolated.png&quot;, 
   IF(AND(ISNULL(MUSW__End_Date__c), MUSW__Due_Date__c &lt; MUSW__Last_Task_Due_Date__c), &quot;https://letterbatch.mybasicgov.com/img/redwarning.gif&quot;,
    IF (MUSW__End_Date__c &lt;= MUSW__Due_Date__c, &quot;/img/entitlement/casemilestone_iscompleted.gif&quot;, 
      IF (MUSW__End_Date__c &gt; MUSW__Due_Date__c, &quot;/img/icon/warning16.png&quot;, 
   &quot;/s.gif&quot;
   )
  )
 )
),
&quot;&quot;
)</formula>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                    <default>true</default>
                    <label>Compliant</label>
                </value>
                <value>
                    <fullName>Open Violation</fullName>
                </value>
                <value>
                    <fullName>Closed Violation</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>